# pysnowrunner

./: .gitignore  .mypy.ini  README.md  _config.yml  about.md  engines.html  feed.xml  index.html  index.md  jekyll.py  setup.cfg  snowrunner.py  style.css  tires.html  trucks.html
_data/: engines.json  tires.json  version.json
_includes/: chart.html  custom-head.html  footer.html  truck-list.html
_sass/minima/: custom-styles.scss
about/: index.html
assets/css/: style.css  style.css.map
engines/: index.html
pysnowrunner/: __main__.py  jekyll.py  loader.py  types.py
tests/: test_code.py
tires/: index.html
