[metadata]
name = pysnowrunner
description = Load SnowRunner game data.
author = schnusch
license = AGPL-3.0-or-later
license_file = COPYING.md

[options]
packages =
    pysnowrunner
test_suite = tests
tests_require =
    black
    flake8
    isort
    mypy

[options.entry_points]
console_scripts =
    pysnowrunner-jekyll = pysnowrunner.jekyll:main
